syntax = "proto3";

package email;

option go_package = "./email-service/;email";

service EmailService {
  rpc SendEmail(SendEmailRequest) returns (SendEmailResponse);
}

message SendEmailRequest {
  string recipient = 1;
  string subject = 2;
  string body = 3;
}

message SendEmailResponse {
  string status = 1;
  string message = 2;
}